Fix buffer list overflow

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
 	display: grid;
-	grid-template-rows: auto max-content;
+	grid-template-rows: 1fr max-content;
 	grid-template-columns: max-content auto;
 	font-family: monospace;
 }
